--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@ new HierarchicalSelect(
 	$("hierarchical_select_td"),
 
 	{
-		"example option A": {
-			"A-1": {"A-1-1": {}, "A-1-2": {}},
-			"A-2": {},
-			"A-3": {}
+		"Animals": {
+			"Mammals": {"Baboon": {}, "Tapir": {}, "Alpaca" : {} },
+			"Fish": {},
+			"Amoeba": {}
 		}, 
-		"example option B": {
-			"B-1": {"B-1-1": {"B-1-1-1":{}}}
+		"Plants": {
+			"Trees": {"Citrus": {"Pomelo":{}}}
 		}
 	},
 	
   {
 		"header": "<Example Hierarchical Select>",
   	"afterSelect": function(sel) { $('show').value = sel.value; }
-  	// ,"selecteds": ["example option A", "A-1"]//if there are default values
+  	// ,"selecteds": ["Animals", "Amoeba"]//if there are default values
  	}
 
 );
