fixed example page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ When creating an object of hierarchical select, the first argument specifies the
   </td>
 </table>
 <br/>
-<b>The output looks like: <a id="hierarchical_select_container_1"/></b>
+<b>The output looks like: <a id="hierarchical_select_container_1"></a></b>
 <p>This field gets the option you've selected. <input type="text" id="show_1" size="27"></input></p>
  
  
@@ -121,7 +121,7 @@ If there is a default value, i.e. you want to create your hierarchical select wi
   </td>
 </table>
 <br/>
-<b>The output looks like: <a id="hierarchical_select_container_2"/></b>
+<b>The output looks like: <a id="hierarchical_select_container_2"></a></b>
 <p>This field gets the option you've selected. <input type="text" id="show_2" size="27"></input></p>
  
 <script type="text/javascript">
