--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@ Hierarchical select refers to situations where the select options represent a hi
 When creating an object of hierarchical select, the first argument specifies the element in a page that contains the intending select elements, i.e. the location to place the hierarchical select. The hierarchical objects for options in the select elements should be provided as the second argument, in the format as shown in the following example. The third argument includes other necessary parameters: "header" is used to give a indicative header to the upper select element, and "afterSelect" specifies the behavior that responses to the select action.
 </p>
  
-<table border="1" width="100%">
-  <td bgcolor="LightGrey">
-		<pre>
- new HierarchicalSelect(
-
+<div>
+<code><pre>
+new HierarchicalSelect(
    $("hierarchical_select_container_1"),
-
    {
      "example option A": {
        "A-1": {"A-1-1": {}, "A-1-2": {}},
@@ -45,15 +42,13 @@ When creating an object of hierarchical select, the first argument specifies the
        "B-1": {"B-1-1": {"B-1-1-1":{}}}
      }
    },
-
    {	
      "header": "&lt;Example Hierarchical Select&gt;",
      "afterSelect": function(sel) { $('show_1').value = sel.value; }
    }
-
- );</pre>
-  </td>
-</table>
+ );
+</pre>
+</code>
 <br/>
 <b>The output looks like: <a id="hierarchical_select_container_1"></a></b>
 <p>This field gets the option you've selected. <input type="text" id="show_1" size="27"></input></p>
@@ -92,14 +87,11 @@ new HierarchicalSelect(
 <p>
 If there is a default value, i.e. you want to create your hierarchical select with something being selected, you can simply specify the default value within the third argument, all select elements needed will then be generated with corresponding options being selected.
 </p>
- 
-<table border="1" width="100%">
-  <td bgcolor="LightGrey">
-		<pre>
+
+<div>
+<code><pre>
  new HierarchicalSelect(
-
    $("hierarchical_select_container_2"),
-
    {
      "example option A": {
        "A-1": {"A-1-1": {}, "A-1-2": {}},
@@ -110,16 +102,13 @@ If there is a default value, i.e. you want to create your hierarchical select wi
        "B-1": {"B-1-1": {"B-1-1-1":{}}}
      }
    },
-
    {
      "header": "&lt;Example Hierarchical Select&gt;",
      "afterSelect": function(sel) { $('show_2').value = sel.value; },
      <b>"defaultOption": "A-1-1"</b>
    }
-
- );</pre>
-  </td>
-</table>
+ );
+</pre></code>
 <br/>
 <b>The output looks like: <a id="hierarchical_select_container_2"></a></b>
 <p>This field gets the option you've selected. <input type="text" id="show_2" size="27"></input></p>
